--- a/public/asset/css/style.css
+++ b/public/asset/css/style.css
@@ -1,4 +1,3 @@
-
 /*** Spinner Start ***/
 /*** Spinner ***/
 #spinner {
@@ -927,5 +926,43 @@
     background: var(--bs-dark);
 }
 /*** copyright end ***/
+
+/*** Fixed Search Form Overlay ***/
+.fixed-search-form {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    pointer-events: none;
+}
+
+.fixed-search-form .ticket-form {
+    background: rgba(255, 255, 255, 0.9);
+    border-radius: 10px;
+    margin-top: 100px;
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
+    pointer-events: auto;
+}
+
+@media (max-width: 1199px) {
+    .fixed-search-form .ticket-form {
+        margin-top: 150px;
+    }
+}
+
+@media (max-width: 991px) {
+    .fixed-search-form {
+        position: relative;
+        height: auto;
+        margin-top: -100px;
+        margin-bottom: 50px;
+    }
+    
+    .fixed-search-form .ticket-form {
+        margin-top: 0;
+    }
+}
 
 
